--- a/package.json
+++ b/package.json
@@ -9,15 +9,53 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.5",
-    "expo-status-bar": "~1.6.0",
+    "-": "^0.0.1",
+    "@expo/react-native-action-sheet": "^4.0.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-picker/picker": "2.7.5",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@types/react-native-vector-icons": "^6.4.13",
+    "D": "^1.0.0",
+    "expo": "~51.0.24",
+    "expo-build-properties": "^0.12.4",
+    "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.21",
+    "expo-document-picker": "~12.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-print": "~13.0.1",
+    "expo-sharing": "~12.0.1",
+    "expo-sqlite": "^14.0.5",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.74.3",
+    "react-native-blob-util": "^0.18.6",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-html-to-pdf": "^0.12.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-pdf": "^6.7.5",
+    "react-native-popup-menu": "^0.16.1",
+    "react-native-prompt": "^1.0.0",
+    "react-native-prompt-android": "^1.1.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-swipeout": "^2.3.6",
+    "react-native-tableview": "^3.1.0",
+    "react-native-tableview-simple": "^4.4.0",
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-webview": "13.8.6",
+    "rn-pdf-reader-js": "^4.1.1",
+    "styled-components": "^6.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
-    "typescript": "^5.1.3"
+    "@babel/core": "^7.24.0",
+    "@types/react": "~18.2.79",
+    "@types/react-native-html-to-pdf": "^0.8.1",
+    "@types/react-native-sqlite-storage": "^6.0.0",
+    "@types/styled-components-react-native": "^5.2.1",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
